# hland_django

./: .gitignore  Dockerfile  README.md  auth.bash  auth.cleanup.bash  manage.py  pyproject.toml  renew.bash
attractions/: admin.py  forms.py  models.py  urls.py  views.py
attractions/migrations/: 0001_initial.py  0002_category_order.py  0003_attraction.py  0004_attraction_additional_images.py
attractions2/: admin.py  api_views.py  apps.py  base_models.py  base_views.py  forms.py  models.py  pager.py  tests.py  trail.py  urls.py  views.py
attractions2/migrations/: 0001_initial.py  0002_attraction_museum_museumdomain.py  0003_auto_20211107_1547.py  0004_attraction_region.py  0005_auto_20211108_0728.py  0006_attraction_address.py  0007_museumdomain_date_modified.py  0008_googleuser.py  0009_auto_20211112_0705.py  0010_auto_20211114_0548.py  0011_auto_20211118_1935.py  0012_auto_20211118_1945.py  0013_auto_20211120_1305.py  0014_auto_20211122_1538.py  0015_alter_attraction_region.py  0016_auto_20211127_1029.py  0017_remove_attraction_suitability.py  0018_attraction_content_type.py  0019_delete_suitability.py  0020_offroad_offroadtriptype.py  0021_offroadtriptype_date_modified.py  0022_trail.py  0023_trail_date_modified.py  0024_trailupload.py  0025_auto_20220105_1622.py  (+34 more)
hland/: asgi.py  base_settings.py  settings.py  urls.py  views.py  wsgi.py
market_review/: admin.py  apps.py  features.py  forms.py  models.py  thumb_gen.py  urls.py  views.py
templates/: base.html  homepage.html
tenbis/: admin.py  apps.py  btprint.py  forms.py  models.py  urls.py  views.py
(+48 files in other folders)
